--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0072)https://gemotest.ru/covidcheck/?key=FCE32D9A-C1EE-11EB-BE82-005056BDEFA8 -->
 <html lang="ru"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -606,18 +605,18 @@ body {
 
 				<div class="advansed">
 					<dl>
-						<dt>Пациент</dt> <dd>А***а А. А.</dd>
-													<dt>Год рождения</dt> <dd>1989</dd>
+						<dt>Пациент</dt> <dd>Г***о А. В.</dd>
+													<dt>Год рождения</dt> <dd>1987</dd>
 																																				<dt>Коронавирус, РНК (SARS-CoV-2, ПЦР) мазок, кач.</dt>
-									<dd>РНК НЕ ОБНАРУЖЕНА (01 июн 2021)</dd>
+									<dd>РНК НЕ ОБНАРУЖЕНА (09 сент 2021)</dd>
 																										</dl>
 				</div>
 									<div class="advansed">
 						<dl>
-							<dt>Patient</dt> <dd>A***a A. A.</dd>
-															<dt>Year of birth</dt> <dd>1989</dd>
+							<dt>Patient</dt> <dd>G***o A. V.</dd>
+															<dt>Year of birth</dt> <dd>1987</dd>
 																																																				<dt>Coronavirus, RNA (SARS-CoV-2, Real-time PCR) smear, qualitative</dt>
-											<dd>Negative (Jun 01, 2021)</dd>
+											<dd>Negative (Sept 09, 2021)</dd>
 																																								</dl>
 					</div>
 									</div>
